fixed image spacing per tosin

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ p {
 a > img {
     height: 30px;
     width: 30px;
+    padding-right: 10px;
 }
 
 .instaimages {
